# cpp-labs

lab1/: .gitignore  geometry.cpp  polynomial.cpp
lab2/: .gitignore  parser.cpp
lab3/: main.cpp  stl_cyclic_buffer.h  stl_semen_algorithms.h  stl_tests.h
lab4/: .gitignore  cube.h  cube_state.txt  genetic_algorithm.h  main.cpp  small_cube.h
lab5/: semen_allocator.cpp
lab6/: CMakeLists.txt  polynom.h  tests.cpp
